--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -5,64 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Employee Training Institute | About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/read_more.js">
-    <link rel="stylesheet" href="CSS/stylesheet.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <header>
-                    <div class="topbar">619-388-4967</div>
-                </header>
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="topbar">619-388-4967</div>    
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col d-flex justify-content-center">            
+                    <nav class="navbar navbar-expand-md navbar-light bg-light">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="Assets/logo.png" width="180" height="80" alt="ETI logo">
+                        </a>
+                        <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="foremployers.html">Employers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-        </div>    
-        <!--<div class="row">
-            <div class="col">
-                <img id="logoimg" src="Assets/logo.png" alt="logo">
+            <div class="row mission room align-items-center">
+                <div class="col">
+                    <h3 class="text-center room">Reshaping the Landscape of Learning Today</h3>
+                </div>
             </div>
-        </div>-->
-        <div class="row">
-            <div class="col d-flex justify-content-center">            
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="Assets/logo.png" width="180" height="80" alt="ETI logo">
-                    </a>
-                    <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Employers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="studnets.html" target="_blank">Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html" target="_blank">About ETI</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-        <div class="row mission room align-items-center">
-            <div class="col">
-                <h3 class="text-center room">Reshaping the Landscape of Learning Today</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center">
-                <img src="Assets/banner.jpg" class="img-fluid" alt="">
+            <div class="row">
+                <div class="col text-center">
+                    <img src="Assets/banner.jpg" class="img-fluid" alt="">
+                </div>
             </div>
         </div>
-    </div>
+    </header>
     <main>
         <div class="container">
             <div class="row mission">
