--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Employee Training Institute</title>
+    <title>Employee Training Institute | Employers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,68 +14,105 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">    
-                <header>
+    <header> 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">    
                     <div class="topbar">619-388-4967</div>
-                    <img class="logoimg" src="Assets/logo.png" alt="logo">
-                </header>
-                <nav>
-                    <ul class="nav justify-content-center">
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Employers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html" target="_blank">About ETI</a>
-                        </li>
-                    </ul>
-                </nav>
+                </div>
+            </div>
+            <!--<img class="logoimg" src="Assets/logo.png" alt="logo">-->
+            <div class="row">
+                <div class="col d-flex justify-content-center">            
+                    <nav class="navbar navbar-expand-md navbar-light bg-light">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="Assets/logo.png" width="180" height="80" alt="ETI logo">
+                        </a>
+                        <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="foremployers.html">Employers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <!--<nav>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">Employers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Students</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                    </li>
+                </ul>
+            </nav>-->
+        <div class="row mission room align-items-center">
+            <div class="col">
+                <h3 class="text-center room">Employers | Contract Education</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col"> 
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="Assets/img1.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="Assets/img2.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="Assets/img4.jpg" alt="Third slide">
-                        </div>
-                        <div class="carousel-caption d-none d-md-block">
-                            <h1 class="container" id="bannersubject">The skills you need to succeed</h1>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+            <div class="col text-center">
+                <img src="Assets/network.jpg" class="img-fluid" alt="">
             </div>
         </div>
     </div>
+</header>
+    <main>
+        <div class="container"> 
+            <div class="row mission">
+                <div class="col-5"> 
+                    <h4 class="border-bottom border-left">What is<br> Contract Education </h4>
+                </div>
+            </div>
+            <div class="row mission"> 
+                <div class="col-md-10 offset-md-2">
+                    <div id="summary">
+                        <p class="collapse" id="collapseSummary">
+                        The Education Training Institute (ETI) at San Diego Continuing Education is a in a unique position to assist businesses, nonprofit organizations, and public entities with customized education and training for employees and/or clientele. Contract education services represent an entrepreneurial response to industry and employer needs to impact the success of regional businesses and other organizations the employ workers or train clients.<br>
+                        Customized training through Contract Education provides local businesses with employee education and training that meets specific and immediate needs. Educational opportunities range from short-term training seminars to long-term training programs.<br>
+                        ETI provides assistance and customized training support to employers and organizations that are increasing productivity. Plus, ETI works with organizations that workforce training and related skills (including English language instruction and soft skills trainings, such as customer service) to employers and organizations that facilitate the professional and personal growth of their clients.</p>
+                        <a class="collapsed" data-toggle="collapse" href="#collapseSummary" aria-expanded="false" aria-controls="collapseSummary"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mission">
+                <div class="col-5"> 
+                    <h4 class="border-bottom border-left"> Why<br> Contract Education Matters</h4>
+                </div>
+            </div>
+            <div class="row mission"> 
+                <div class="col-md-10 offset-md-2">
+                    <div id="summary1">
+                        <p class="collapse" id="collapseSummary1">
+                        ETI delivers training programs for both future and current workers to prepare them to be competitive in the application of emerging technologies. Many businesses and organizations need assistance in developing corporate cultures that unleash the creative genius of the workers, give them new tools to increase productivity and improve the quality of products and processes.<br>
+                        Contract education services represent an entrepreneurial response to industry and employer needs to impact business. ETI takes deliberate efforts to reduce program costs to offer our partners the most competitive rates for education and training needs. </p>
+                        <a class="collapsed" data-toggle="collapse" href="#collapseSummary1" aria-expanded="false" aria-controls="collapseSummary1"></a> 
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </main>
 
     <footer>
         <div class="container-fluid">
             <div class="row social">
                 <div class="col-md-8 col-12">
-                    <h2 class="invest">Invest In Your Future <br>Talk To Us</h2>
+                    <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
                 <div class="col-md-4 col-sm-12 talk">
                     <a href="https://www.facebook.com/">
