--- a/Final_Project_Code/studnets.html
+++ b/Final_Project_Code/studnets.html
@@ -2,18 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Employee Training Institute | Students</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <title>ETI</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">   
+    <link rel="stylesheet" href="/read_more.js">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="topbar">619-388-4967</div>    
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col d-flex justify-content-center">            
+                    <nav class="navbar navbar-expand-md navbar-light bg-light">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="Assets/logo.png" width="180" height="80" alt="ETI logo">
+                        </a>
+                        <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="foremployers.html">Employers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="studnets.html" target="_blank">Students</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About ETI</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row mission room align-items-center">
+                <div class="col">
+                    <h3 class="text-center room">Students | Free Based Education</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <img src="Assets/group_2.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>    
     <div class="side container">
         <div class="row">
         <div class="col-3">
@@ -413,6 +459,63 @@
         </div>
         </div>
     </div>
+    </main>
+    <footer>
+        <div class="container-fluid">
+            <div class="row social">
+                <div class="col-md-8 col-12">
+                    <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
+                </div>
+                <div class="col-md-4 col-sm-12 talk">
+                    <a href="https://www.facebook.com/">
+                    <img class="img-thumbnail" src="./Assets/facebooklogoBW.png" alt="facebook logo">
+                    </a>
+                    <a href="https://twitter.com/?lang=en">
+                    <img class="img-thumbnail" src="./Assets/twitterlogoBW.png" alt="twitter logo">
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                    <img class="img-thumbnail" src="./Assets/linkedInlogo4.png" alt="linked in logo">
+                    </a>
+                </div>
+            </div>
+            <div class="row future">
+                <div class="col-md-8 col-sm-12">
+                    <p class="font-italic">Let ETI help you take to the next level.<br>We provide referrals upon request to potential clients that wish to speak with current and past clients.</p>
+                </div>
+                <div class="col-md-4 col-sm-12">  
+                    <p>4343 Ocean View Blvd<br>San Diego, CA 92113</p>
+                </div>
+            </div>
+            <div class="row location">
+                <div class="col-md-4 col-sm-12">
+                    <p>Kay Faulconer Bogan<br>Director of Industry Partnerships<br>
+                    <a href="kfboger@sdccd.edu">kfboger@sdccd.edu</a><br>619.388.4967</p>
+                    <button type="button" class="btn btn-info">Information</button>
+                </div>
+                <div class="col-md-4 col-sm-6"></div>
+                <div class="col-md-4 col-sm-6">  
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13430.030686516233!2d-117.1015642!3d32.6991351!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5e9f0e9e72c3593!2sETi!5e0!3m2!1sen!2sus!4v1578508325063!5m2!1sen!2sus" class="map" allowfullscreen=""></iframe>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script>
+        function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+        
+        if (dots.style.display === "none") {
+            dots.style.display = "inline";
+            btnText.innerHTML = "Read more"; 
+            moreText.style.display = "none";
+        } else {
+            dots.style.display = "none";
+            btnText.innerHTML = "Read less"; 
+            moreText.style.display = "inline";
+        }
+        }
+    </script>
 </body>
 
 </html>
